fixed not visible img

--- a/css/style.css
+++ b/css/style.css
@@ -50,18 +50,6 @@ h3{
   margin: 0 auto;
   padding: 0 30px;
 }
-.row {
-	margin: 0 -10px;
-	font-size: 0;
-}
-.col {
-	font-size: 18px;
-	display: inline-block;
-	vertical-align: top;
-	margin-left: 10px;
-	margin-right: 10px;
-	box-sizing: border-box;
-}
 header {
   background-color: #fff;
   box-shadow: 0px 10px 10px -5px rgba(0, 0, 0, 0.1);
@@ -90,6 +78,9 @@ header {
 }
 .header-nav_link:hover {
   color: #1D9D73;
+}
+.header-nav-burger{
+  display: none;
 }
 .margin-content {
   margin-top: 100px;
@@ -244,8 +235,6 @@ footer {
   border-top: 1px solid #dddddd;
 }
 
-
-
 @media screen and (max-width: 1200px) {
   h1, h2 {
     font-size: 2.7rem;
@@ -319,6 +308,116 @@ footer {
   }
 }
 
-@media screen and (max-width: 1060px) {
-  
+@media screen and (max-width: 840px) {
+  .header-nav_ul {
+    display: none;
+  }
+  .header-nav-burger{
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+  }
+  h1, h2 {
+    font-size: 2.5rem;
+    margin-bottom: 1.3rem;
+  }
+  h4, .h4 {
+    font-size: 1.4rem;
+    margin-bottom: 1rem;
+  }
+  h3{
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+  }
+  .circle{
+    width: 5.5rem;
+    height: 5.5rem;
+  }
+  .adv-flex_item {
+    gap: 20px;
+  }
+  .adv-flex_item {
+    width: calc(50% - 20px);
+    flex-direction: column;
+  }
+  h3 {
+    font-size: 1.4rem;
+  }
+  .howwork-textblock {
+    width: calc(50% - 20px);
+  }
+  .howwork-textblock-content {
+    gap: 20px;
+  }
+  .adv-col {
+    max-width: calc(100% / 2 - 20px);
+  }
+  .adv-col_container{
+    gap: 20px;
+  }
+  .team-col {
+    width: calc((100% / 3) - 10px);
+  }
+  .teams-cards {
+    gap: 10px;
+  }
+  .adv-img {
+    width: 50px;
+    height: 50px;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .logo-icon{
+    max-width: 70%;
+  }
+  .adv-col {
+    max-width: 100%;
+  }
+  .adv-col_container{
+    gap: 30px;
+  }
+  .team-col {
+    width: calc((100% / 2) - 20px);
+  }
+  .teams-cards {
+    gap: 20px;
+  }
+  .adv-flex_item {
+    width: 100%;
+  }
+  .howwork-textblock-content {
+    flex-direction: column;
+  }
+  .howwork-textblock {
+    width: 100%;
+  }
+  .ok-svg {
+    max-width: 35px;
+    height: 35px;
+  }
+}
+
+@media screen and (max-width: 430px) {
+  h1, h2 {
+    font-size: 2.2rem;
+    margin-bottom: 1.3rem;
+  }
+  .team-col {
+    width: 100%;
+    flex-direction: column;
+  }
+  .teams-cards {
+    gap: 20px;
+  }
+  .circle{
+    width: 4rem;
+    height: 4rem;
+  }
+  footer {
+    padding: 2rem 0;
+  }
+  .margin-content {
+    margin-top: 80px;
+  }
 }
